# aulos

./: .appveyor.yml  .gitattributes  .travis.yml  AulosConfig.cmake.in  CMakeLists.txt  README.md  config.h.in
.github/workflows/: linux.yml  windows.yml
aulete/: CMakeLists.txt
aulete/src/: file_output.cpp  file_output.hpp  main.cpp  main.hpp  playback_writer.hpp  playback_writer_winmm.cpp  wav_writer.cpp  wav_writer.hpp
aulos/: CMakeLists.txt  common.hpp  composition.hpp  data.hpp  format.hpp  playback.hpp  renderer.hpp  voice.hpp
aulos/include/: aulos.hpp
aulos/src/: acoustics.hpp  composition.cpp  composition.hpp  data.cpp  generator.hpp  generators.hpp  main.cpp  modulator.cpp  modulator.hpp  note_table.hpp  oscillator.hpp  oscillators.hpp  period.hpp  renderer.cpp  shaper.hpp  tables.hpp  utils.hpp  voice.cpp  voice.hpp  wave.hpp
aulos/src/utils/: fixed.hpp  limited_vector.hpp  static_vector.hpp
aulosplay/: CMakeLists.txt  player.hpp
aulosplay/src/: backend.hpp  backend_alsa.cpp  backend_wasapi.cpp  c_ptr.hpp  player.cpp  utils.cpp  utils.hpp
benchmark/: CMakeLists.txt
benchmark/src/: main.cpp
examples/: Bach_LittleFugue.aulos  Bach_PreludeInCMinor.aulos  FurElise.aulos  GrandeValseBrillante.aulos  Mozart_TurkishMarch.aulos  Necke_CsikosPost.aulos  Popcorn.aulos  PreludeInGMinor.aulos  _Synth1.aulos  csikos_post.aulos  czardas.aulos  danse_macabre.aulos  example_1.aulos  example_1.txt  frere_jacques.aulos  fur_elise.aulos  fur_elise.txt  grande_valse_brillante.aulos  hungarian_dance.aulos  little_fugue.aulos  music.txt  popcorn.aulos  popcorn.txt  prelude_in_c_minor.aulos  prelude_in_g_minor.aulos  synth_1.aulos  turkish_march.aulos
primal/: CMakeLists.txt
studio/: CMakeLists.txt
studio/installer/: CMakeLists.txt  studio.nsi
studio/res/: studio.qrc  studio.rc
studio/src/: add_time_item.cpp  add_time_item.hpp  add_voice_item.cpp  add_voice_item.hpp  button_item.cpp  button_item.hpp  colors.cpp  colors.hpp  composition_item.cpp  composition_item.hpp  composition_scene.cpp  composition_scene.hpp  cursor_item.cpp  elusive_item.cpp  elusive_item.hpp  fragment_item.cpp  fragment_item.hpp  info_editor.cpp  info_editor.hpp  key_item.cpp  key_item.hpp  keyboard_item.cpp  keyboard_item.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  pianoroll_item.cpp  pianoroll_item.hpp  player.cpp  player.hpp  player_wasapi.cpp  player_wasapi.hpp  sequence_editor.cpp  sequence_editor.hpp  sequence_scene.cpp  sequence_scene.hpp  sequence_utils.cpp  sequence_utils.hpp  sound_item.cpp  (+22 more)
studio/src/composition/: add_voice_item.cpp  add_voice_item.hpp  composition_scene.cpp  composition_scene.hpp  composition_widget.cpp  composition_widget.hpp  cursor_item.cpp  cursor_item.hpp  fragment_item.cpp  fragment_item.hpp  loop_item.cpp  loop_item.hpp  timeline_item.cpp  timeline_item.hpp  track_editor.cpp  track_editor.hpp  track_item.cpp  track_item.hpp  voice_editor.cpp  voice_editor.hpp  voice_item.cpp  voice_item.hpp
studio/src/sequence/: key_item.cpp  key_item.hpp  pianoroll_item.cpp  pianoroll_item.hpp  sequence_scene.cpp  sequence_scene.hpp  sequence_widget.cpp  sequence_widget.hpp  sound_item.cpp  sound_item.hpp
tests/: CMakeLists.txt  setup_travis_audio.sh
tests/aulos/: CMakeLists.txt
tests/aulos/src/: acoustics.cpp  common.cpp  format.cpp  loop.cpp  modulator.cpp  oscillator.cpp  period.cpp  shaper.cpp  tables.cpp  utils.cpp  voice.cpp  wave.cpp
tests/aulosplay/: CMakeLists.txt
tests/aulosplay/src/: backend.cpp  common.hpp  player.cpp  utils.cpp
tests/primal/: CMakeLists.txt
tests/src/: format.cpp  loop.cpp  main.cpp  shaper.cpp  voice.cpp  wave.cpp
tonos/: Cargo.toml
tonos/src/: main.rs
tools/aulosmark/: CMakeLists.txt
tools/aulosmark/src/: main.cpp
